# STIR-Futures

./: .gitignore  README.md  my_output.html  pyproject.toml  requirements.txt
examples/: run_all.ipynb
notebooks/: run_all.ipynb
src/: constants.py  dates_calendars.py  nyfed_api.py  reporting.py  rounding.py  scenarios.py  sr1.py  sr3.py  src:__init__.py  zq.py
stir_futures/: __init__.py  calendars.py  cli.py  config.py  constants.py  reporting.py  rounding.py  scenarios.py
stir_futures/data/: __init__.py  cache.py  nyfed.py
stir_futures/pricing/: __init__.py  sr1.py  sr3.py  zq.py
stir_futures/workflows/: __init__.py
